--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
 
 </style>
 
+	  <link rel="icon" href="images/" type="image/x-icon">
+
 
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
