--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 </style>
 
-	  <link rel="icon" href="images/" type="image/x-icon">
+	  <link rel="icon" href="images/logo.jpg" type="image/x-icon">
 
 
   </head>
