--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 								<h1 class="big">About</h1>
 								<h2 class="mb-4">About Me</h2>
 								
-								<p>With over two years of hands-on experience in web development during college, 
+								<p style="text-align: justify;">With over two years of hands-on experience in web development during college, 
 									I'm proficient in Java, Springboot and SQL. I've successfully developed and maintained web applications, demonstrating strong skills in backend development and database management.
 									 My coursework and projects have honed my ability to create robust and efficient web solutions. 
 									 I'm adept at problem-solving and eager to apply my technical expertise to real-world challenges.</p>
@@ -283,7 +283,7 @@
 									<li class="d-flex"><span>Stream:</span> <span>Information Technology</span></li>
 									<li class="d-flex"><span>Language:</span> <span>Telugu, English, and Hindi</span></li>
 									<li class="d-flex"><span>Other Skills:</span> <span>JDBC, JPA, Excel, Git </span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Rubiks Cube Solving and Chess</span></li>
+									<li class="d-flex"><span>Interest:</span> <span>Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
 									
 								</ul>
 							</div>
@@ -469,7 +469,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="5">0</strong>
+                <strong class="number" data-number="4">0</strong>
                 <span>Achievements</span>
               </div>
             </div>
@@ -477,7 +477,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="3">0</strong>
+                <strong class="number" data-number="5">0</strong>
                 <span>Projects</span>
               </div>
             </div>
