--- a/index.html
+++ b/index.html
@@ -277,13 +277,13 @@
 									 My coursework and projects have honed my ability to create robust and efficient web solutions. 
 									 I'm adept at problem-solving and eager to apply my technical expertise to real-world challenges.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Profile:</span> <span>Web Development</span></li>
-									<li class="d-flex"><span>Domain:</span> <span>Java, Springboot, SQL</span></li>
-									<li class="d-flex"><span>Education:</span> <span>Bachelor of Technology</span></li>
-									<li class="d-flex"><span>Stream:</span> <span>Information Technology</span></li>
-									<li class="d-flex"><span>Language:</span> <span>Telugu, English, and Hindi</span></li>
-									<li class="d-flex"><span>Other Skills:</span> <span>JDBC, JPA, Excel, Git </span></li>
-									<li class="d-flex"><span>Interest:</span> <span>Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
+									<li class="d-flex"><span>Profile</span> <span>:Web Development</span></li>
+									<li class="d-flex"><span>Domain</span> <span>:Java, Springboot, SQL</span></li>
+									<li class="d-flex"><span>Education</span> <span>:Bachelor of Technology</span></li>
+									<li class="d-flex"><span>Branch</span> <span>:Information Technology</span></li>
+									<li class="d-flex"><span>Other Skills</span> <span>:JDBC, JPA, Excel, Git </span></li>
+									<li class="d-flex"><span>Language</span> <span>:Telugu, English, and Hindi</span></li>
+									<li class="d-flex"><span>Interest</span> <span>:Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
 									
 								</ul>
 							</div>
@@ -331,11 +331,11 @@
 						<span class="date">JAN 2024 - APRIL 2024</span>
 						<h2>Data Analyst</h2>
 						<span class="position">360DIGITMG</span>
-						<p class="mt-4">As a Data Analyst at 360 DIGI TMG, I gained practical experience in extracting, cleaning, and analyzing complex datasets. 
+						<p class="mt-4" style="text-align: justify;">As a Data Analyst at 360 DIGI TMG, I gained practical experience in extracting, cleaning, and analyzing complex datasets. 
 							<ul>
-								<li>I focused on identifying key trends, patterns, and insights to support data-driven decision-making for various business problems.</li>
-								<li>My work involved applying statistical analysis and utilizing tools like SQL and potentially Python/R for data manipulation and visualization.</li>
-								<li>I contributed to projects such as sales data analysis, customer segmentation, or website traffic analysis, transforming raw data into actionable intelligence.</li>
+								<li style="text-align: justify;">I focused on identifying key trends, patterns, and insights to support data-driven decision-making for various business problems.</li>
+								<li style="text-align: justify;">My work involved applying statistical analysis and utilizing tools like SQL and potentially Python/R for data manipulation and visualization.</li>
+								<li style="text-align: justify;">I contributed to projects such as sales data analysis, customer segmentation, or website traffic analysis, transforming raw data into actionable intelligence.</li>
 							</ul>
 						</p>
 					</div>
@@ -345,13 +345,13 @@
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
 						<span class="date">MAY 2023 - JUNE 2023</span>
-						<h2>Java Full Stack Developer</h2>
+						<h2>Full Stack Developer</h2>
 						<span class="position">Miracle Software Systems, Inc</span>
-						<p class="mt-4">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
+						<p class="mt-4" style="text-align: justify;">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
 							<ul>
-								<li>Primarily worked with Java, Spring Boot, Postman(API) and SQL developing robust and scalable backend services.</li>
-								<li>My experience includes building an e-commerce website, contributing to both front-end and back-end functionalities.</li>
-								<li>This involved leveraging Spring Boot for API development and integrating with databases for product, order, and user management.</li>
+								<li style="text-align: justify;">Primarily worked with Java, Spring Boot, Postman(API) and SQL developing robust and scalable backend services.</li>
+								<li style="text-align: justify;">My experience includes building an e-commerce website, contributing to both front-end and back-end functionalities.</li>
+								<li style="text-align: justify;">This involved leveraging Spring Boot for API development and integrating with databases for product, order, and user management.</li>
 							</ul>
 						</p>
 					</div>
@@ -424,8 +424,8 @@
               </a>
               <div class="text mt-3 float-right d-block">
 
-                <h3 class="heading"><a href="https://github.com/Mr-Mohan-Anand/LMS-RPA-WEB">Learning Management System Using Robotic Process Automation</a></h3>
-                <p>LMS enhanced with RPA automates repetitive administrative tasks, significantly streamlining operations for educators and students.
+                <h3 class="heading"><a href="https://github.com/Mr-Mohan-Anand/LMS-RPA-WEB">Learning Management System With RPA</a></h3>
+                <p style="text-align: justify;">LMS enhanced with RPA automates repetitive administrative tasks, significantly streamlining operations for educators and students.
 					 Improves efficiency in areas like course enrollment, grading, and content delivery, allowing for a more focused and personalized learning experience.</p>
               </div>
             </div>
@@ -437,7 +437,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Mr-Mohan-Anand/Ecommerce">E Commerce Web Application For Shopping</a></h3>
-                <p>An e-commerce application provides an online platform for buying and selling goods or services, enabling businesses to reach a wider customer base and offering shopping from anywhere,
+                <p style="text-align: justify;">An e-commerce application provides an online platform for buying and selling goods or services, enabling businesses to reach a wider customer base and offering shopping from anywhere,
 					manages product catalogs, shopping carts, secure transactions, and order.</p>
               </div>
             </div>
@@ -449,7 +449,7 @@
               <div class="text mt-3 float-right d-block">
 
                 <h3 class="heading"><a href="https://github.com/Mr-Mohan-Anand/Integration_of_payment_gateway">Payment Gateway Integration Web Application</a></h3>
-                <p>A Payment Gateway Integration Web Based Application provides the essential interface for securely processing online payments, acting as a crucial bridge between your website and financial institutions.
+                <p style="text-align: justify;">A Payment Gateway Integration Web Based Application provides the essential interface for securely processing online payments, acting as a crucial bridge between your website and financial institutions.
 					It enables transaction security and a seamless customer checkout experience.
 				</p>
               </div>
