--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
                 <h3 class="heading"><a href="https://github.com/Mr-Mohan-Anand/Ecommerce">E Commerce Web Application For Shopping</a></h3>
                 <p style="text-align: justify;">An e-commerce application provides an online platform for buying and selling goods or services, enabling businesses to reach a wider customer base and offering shopping from anywhere,
-					manages product catalogs, shopping carts, secure transactions, and order.</p>
+					manages product catalogs, shopping carts, secure transactions, orders and CRM.</p>
               </div>
             </div>
           </div>
