--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Mohan Anand Kumar Palleti Portfolio</title>
+    <title>Mohan Anand Kumar Palleti | Portfolio</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -189,7 +189,7 @@
 
 						<br>
 						<br>
-			            <h2>Java Developer</h2>
+			            <h2>Java Developer!</h2>
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti" class="btn btn-primary py-3 px-4">LinkedIn</a> 
@@ -281,8 +281,8 @@
 									<li class="d-flex"><span>Domain</span> <span>:Java, Springboot, SQL</span></li>
 									<li class="d-flex"><span>Education</span> <span>:Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Branch</span> <span>:Information Technology</span></li>
-									<li class="d-flex"><span>Other Skills</span> <span>:JDBC, JPA, Excel, Git </span></li>
-									<li class="d-flex"><span>Language</span> <span>:Telugu, English, and Hindi</span></li>
+									<li class="d-flex"><span>Other Skills</span> <span>:JDBC, JPA, Git, MS Office </span></li>
+									<li class="d-flex"><span>Language</span> <span>:Telugu, English & Hindi</span></li>
 									<li class="d-flex"><span>Interest</span> <span>:Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
 									
 								</ul>
@@ -535,7 +535,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">Download Resume</h3>
-	            <p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view?usp=drive_link">resumelink</a></p>
+	            <p><a href="https://drive.google.com/file/d/1AmsXj8qVGcFduYos_vTFRi76p27uWwvb/view?usp=drive_link">ResumeLink</a></p>
 	          </div>
           </div>
 
@@ -569,7 +569,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-	Copyright @2024 </script> All Rights Reserved <i class="icon-heart color-danger" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank"></a>
+	Copyright @2024 MAK. </script> All Rights Reserved <i class="icon-heart color-danger" aria-hidden="true"></i>  <a href="https://colorlib.com" target="_blank"></a>
 	<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
 			</div>
 		  </div>
