--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 								  </div>
 
 								<div class="skill-mf">
-									<p class="title-s">Skills</p>
+									<p class="title-s" style="color:#CD5C5C">Skills</p>
 									<span>HTML</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
@@ -293,7 +293,7 @@
 						<div class="counter-wrap ftco-animate d-flex mt-md-3">
 							<div class="text">
 								<p class="mb-4">
-									<span class="number" data-number="2">0</span> <span>+</span>
+									<span class="number" data-number="3">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
 								<p><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
