--- a/index.html
+++ b/index.html
@@ -469,10 +469,12 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
-            <p>In 2015, I was honored to be selected for the prestigious Central Government's NMMS Award, achieving District First position, which recognized my academic merit and provided a 5-year scholarship for my continued education.</p>
-		  <p>In 2018, while in 10th class, I was profoundly honored with the prestigious Pratibha Award by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a merit certificate, a tablet, a gold medal, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</p>
-		<p>In 2019, during my Intermediate studies, I was honored with the Academic Excellence Award on the occasion of National Mathematics Day, recognizing my strong performance in academics.</p>
-		  <p>As an Information Technology graduate from JNTU-GV University, I successfully secured First Class with Distinction in my B.Tech academics, showcasing consistent high performance.</p>
+		  <ul style="list-style-type:circle">
+            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's NMMS Award, achieving District First position, which recognized my academic merit and provided a 5-year scholarship for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious Pratibha Award by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a merit certificate, a tablet, a gold medal, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
+		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the Academic Excellence Award on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from JNTU-GV University, I successfully secured First Class with Distinction in my B.Tech academics, showcasing consistent high performance.</li>
+		  </ul>
           </div>
         </div>
 
