--- a/index.html
+++ b/index.html
@@ -346,11 +346,11 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">MAY 2023 - JUNE 2023</span>
 						<h2>Full Stack Developer</h2>
-						<span class="position">Miracle Software Systems</span>
+						<span class="position">Miracle Software Systems, Inc</span>
 						<p class="mt-4" style="text-align: justify;">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
 							<ul>
 								<li style="text-align: justify;">Primarily worked with Java, Spring Boot, Postman(API) and SQL developing robust and scalable backend services.</li>
-								<li style="text-align: justify;">My experience includes building an e-commerce website, contributing to both front-end services and back-end functionalities.</li>
+								<li style="text-align: justify;">My experience includes building an e-commerce website, contributing to both front-end and back-end functionalities.</li>
 								<li style="text-align: justify;">This involved leveraging Spring Boot for API development and integrating with databases for product, order, and user management.</li>
 							</ul>
 						</p>
@@ -470,10 +470,10 @@
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's NMMS Award, achieving District First position, which recognized my academic merit and provided a 5-year scholarship for my continued education.</li>
-		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious Pratibha Award by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a merit certificate, a tablet, a gold medal, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
-		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the Academic Excellence Award on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
-		  <li style="text-align: justify;">As an Information Technology graduate from JNTU-GV University, I successfully secured First Class with Distinction in my B.Tech academics, showcasing consistent high performance.</li>
+            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's NMMS AWARD, achieving District FIRST position, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious PRATIBHA AWARD by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
+		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the ACADEMIC EXCELLENCE AWARD on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from JNTU-GV University, I successfully secured FIRST CLASS WITH DISTINCTION in my B.Tech academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
         </div>
