--- a/index.html
+++ b/index.html
@@ -230,14 +230,14 @@
 								  </div>
 
 								<div class="skill-mf">
-									<p class="title-s" style="color:#CD5C5C">Skills</p>
+									<p class="title-s" style="color:#CD5C5C"> <b> SKILLS </b> </p>
 									<span>HTML</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
 											aria-valuemax="100"></div>
 									</div>
 									
-									<span>CSS</span> <span class="pull-right">85%</span>
+									<span>CSS</span> <span class="pull-right">80%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="0"
 											aria-valuemax="100"></div>
@@ -339,7 +339,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2020-2024</span>
-    					<h2>Bachelor of Technology, IT</h2>
+    					<h2>Bachelor of Technology - IT</h2>
     					<span class="position">JNTU-GV College of Engineering</span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
     				</div>
@@ -357,7 +357,7 @@
     			<div class="col-md-6">
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
-    					<h2>Secondary School</h2>
+    					<h2>Secondary School Certificate</h2>
     					<span class="position">ZPP High School</span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
 						<p class="mt-4">Got NMMS Award and PRATIBHA AWARD</p>
