--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     					<h2>Secondary School Certificate</h2>
     					<span class="position">ZPP High School</span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
-						<p class="mt-4">Got NMMS Award and PRATIBHA AWARD</p>
+						<p class="mt-4">Got <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS Award</a> and <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> </p>
     				</div>
 				</div>
     		</div>
@@ -481,9 +481,9 @@
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's NMMS AWARD, achieving District FIRST position, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
-		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious PRATIBHA AWARD by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
-		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the ACADEMIC EXCELLENCE AWARD on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
+            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving District FIRST position, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
+		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
 		  <li style="text-align: justify;">As an Information Technology graduate from JNTU-GV University, I successfully secured FIRST CLASS WITH DISTINCTION in my B.Tech academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
