--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 								  </div>
 
 								<div class="skill-mf">
+									<br>
 									<p class="title-s" style="color:#CD5C5C"> <b> SKILLS </b> </p>
 									<span>HTML</span> <span class="pull-right">90%</span>
 									<div class="progress">
@@ -277,6 +278,7 @@
 									 My coursework and projects have honed my ability to create robust and efficient web solutions. 
 									 I'm adept at problem-solving and eager to apply my technical expertise to real-world challenges.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
+									<li class="d-flex"><span>Father</span> <span>:Palleti Upparayya</span></li>
 									<li class="d-flex"><span>Profile</span> <span>:Web Development</span></li>
 									<li class="d-flex"><span>Domain</span> <span>:Java, Springboot, SQL</span></li>
 									<li class="d-flex"><span>Education</span> <span>:Bachelor of Technology</span></li>
@@ -296,7 +298,7 @@
 									<span class="number" data-number="3">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti" class="btn btn-primary py-3 px-3">LinkedIn</a></p>
+								<p><a href="https://github.com/Mr-Mohan-Anand" class="btn btn-primary py-3 px-3">GITHUB</a></p>
 							</div>
 						</div>
 					</div>
@@ -481,10 +483,10 @@
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving District FIRST position, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
-		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister Nara Chandrababu Naidu Sir, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
+            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
 		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
-		  <li style="text-align: justify;">As an Information Technology graduate from JNTU-GV University, I successfully secured FIRST CLASS WITH DISTINCTION in my B.Tech academics, showcasing consistent high performance.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my B.Tech academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
         </div>
@@ -580,7 +582,7 @@
 					  <li class="ftco-animate"><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti"><span class="icon-linkedin"></span></a></li>  
 					  <li class="ftco-animate"><a href="https://x.com/Mr_Mohan_Anand"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/mohananandkumar.palleti/"><span class="icon-facebook"></span></a></li>
-				      <li class="ftco-animate"><a href="https://www.instagram.com/mr_mohan_anand/"><span class="icon-instagram"></span></a></li>
+				          <li class="ftco-animate"><a href="https://www.instagram.com/mr_mohan_anand/"><span class="icon-instagram"></span></a></li>
 					</ul>
 				<br>
 		   </div>
