--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
 									<!-- Details next to profile image -->
 									<div class="col-sm-6 col-md-7">
 									  <div class="about-info">
-										<p><span class="title-s">Name: </span> <span>Mohan Anand Kumar Palleti</span></p>
-										<p><span class="title-s">My Role: </span> <span>Web Developer</span></p>
-										<p><span class="title-s">Experience: </span> <span>2 Years</span></p>
-										<p><span class="title-s">Address: </span> <span>West Godavari, India</span></p>
+										<p><span class="title-s"><b>Name:</b> </span> <span>Mohan Anand Kumar Palleti</span></p>
+										<p><span class="title-s"><b>My Role:</b> </span> <span>Web Developer</span></p>
+										<p><span class="title-s"><b>Experience:</b> </span> <span>2 Years</span></p>
+										<p><span class="title-s"><b>Address:</b> </span> <span>West Godavari, India</span></p>
 									  </div>
 									</div>
 								  </div>
@@ -298,7 +298,7 @@
 									<span class="number" data-number="3">0</span> <span>+</span>
 									<span>&nbsp; Projects completed</span>
 								</p>
-								<p><a href="https://github.com/Mr-Mohan-Anand" class="btn btn-primary py-3 px-3">GITHUB</a></p>
+								<p><a href="https://github.com/Mr-Mohan-Anand" class="btn btn-primary py-4 px-4">GITHUB</a></p>
 							</div>
 						</div>
 					</div>
@@ -342,7 +342,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2020-2024</span>
     					<h2>Bachelor of Technology - IT</h2>
-    					<span class="position">JNTU-GV College of Engineering</span>
+    					<span class="position"><b>JNTU-GV College of Engineering</b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
     				</div>
     			</div>
@@ -351,7 +351,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2018-2020</span>
     					<h2>Intermediate - MPC</h2>
-    					<span class="position">Elite Junior College</span>
+    					<span class="position"><b>Elite Junior College</b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
     				</div>
 				</div>
@@ -360,7 +360,7 @@
     				<div class="resume-wrap ftco-animate">
     					<span class="date">2017-2018</span>
     					<h2>Secondary School Certificate</h2>
-    					<span class="position">ZPP High School</span>
+    					<span class="position"><b>ZPP High School</b></span>
     					<p class="mt-4">Grade: First Class With Distinction.</p>
 						<p class="mt-4">Got <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS Award</a> and <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> </p>
     				</div>
@@ -383,7 +383,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">JAN 2024 - APRIL 2024</span>
 						<h2>Data Analyst</h2>
-						<span class="position">360DIGITMG</span>
+						<span class="position"><b>360DIGITMG</b></span>
 						<p class="mt-4" style="text-align: justify;">As a Data Analyst at 360 DIGI TMG, I gained practical experience in extracting, cleaning, and analyzing complex datasets. 
 							<ul>
 								<li style="text-align: justify;">I focused on identifying key trends, patterns, and insights to support data-driven decision-making for various business problems.</li>
@@ -399,7 +399,7 @@
 					<div class="resume-wrap ftco-animate">
 						<span class="date">MAY 2023 - JUNE 2023</span>
 						<h2>Full Stack Developer</h2>
-						<span class="position">Miracle Software Systems, Inc</span>
+						<span class="position"><b>Miracle Software Systems, Inc</b></span>
 						<p class="mt-4" style="text-align: justify;">As a Trainee Java Full Stack Developer at Miracle Software Systems, I gained hands-on experience in full-stack web application development.
 							<ul>
 								<li style="text-align: justify;">Primarily worked with Java, Spring Boot, Postman(API) and SQL developing robust and scalable backend services.</li>
@@ -483,10 +483,10 @@
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a 5-year SCHOLARSHIP for my continued education.</li>
-		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 cash prize, recognizing my exceptional academic merit.</li>
-		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of National Mathematics Day, recognizing my strong performance in academics.</li>
-		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my B.Tech academics, showcasing consistent high performance.</li>
+            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
+		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a <b>MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 Cash Prize</b>, recognizing my exceptional academic merit.</li>
+		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of <b>National Mathematics Day</b>, recognizing my strong performance in academics.</li>
+		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
 		  </ul>
           </div>
         </div>
