--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
 	          <li class="nav-item"><a href="#project-section" class="nav-link"><span>Projects</span></a></li>
+		  <li class="nav-item"><a href="#achievements-section" class="nav-link"><span>Achievements</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -231,7 +232,7 @@
 
 								<div class="skill-mf">
 									<br>
-									<p class="title-s" style="color:#CD5C5C"> <b> SKILLS </b> </p>
+									<p class="title-s" style="color:#CD5C5C"> <u> <b> SKILLS: </b> </u> </p>
 									<span>HTML</span> <span class="pull-right">90%</span>
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" style="width: 95%;" aria-valuenow="95" aria-valuemin="0"
@@ -278,14 +279,14 @@
 									 My coursework and projects have honed my ability to create robust and efficient web solutions. 
 									 I'm adept at problem-solving and eager to apply my technical expertise to real-world challenges.</p>
 								<ul class="about-info mt-4 px-md-0 px-2">
-									<li class="d-flex"><span>Father</span> <span>:Palleti Upparayya</span></li>
-									<li class="d-flex"><span>Profile</span> <span>:Web Development</span></li>
-									<li class="d-flex"><span>Domain</span> <span>:Java, Springboot, SQL</span></li>
-									<li class="d-flex"><span>Education</span> <span>:Bachelor of Technology</span></li>
-									<li class="d-flex"><span>Branch</span> <span>:Information Technology</span></li>
-									<li class="d-flex"><span>Other Skills</span> <span>:JDBC, JPA, Git, MS Office </span></li>
-									<li class="d-flex"><span>Language</span> <span>:Telugu, English & Hindi</span></li>
-									<li class="d-flex"><span>Interest</span> <span>:Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
+									<li class="d-flex"><span>Father</span> <span>: Palleti Upparayya</span></li>
+									<li class="d-flex"><span>Profile</span> <span>: Web Development</span></li>
+									<li class="d-flex"><span>Domain</span> <span>: Java, Springboot, SQL</span></li>
+									<li class="d-flex"><span>Education</span> <span>: Bachelor of Technology</span></li>
+									<li class="d-flex"><span>Branch</span> <span>: Information Technology</span></li>
+									<li class="d-flex"><span>Other Skills</span> <span>: JDBC, JPA, Git & MS Office </span></li>
+									<li class="d-flex"><span>Language</span> <span>: Telugu, English and Hindi</span></li>
+									<li class="d-flex"><span>Interest</span> <span>: Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
 									
 								</ul>
 							</div>
@@ -476,7 +477,7 @@
 	  </div>
     </section>
 
-	   <section class="ftco-section ftco-no-pb" id="resume-section">
+	   <section class="ftco-section ftco-no-pb" id="achievements-section">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
