--- a/index.html
+++ b/index.html
@@ -584,6 +584,7 @@
 					  <li class="ftco-animate"><a href="https://x.com/Mr_Mohan_Anand"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/mohananandkumar.palleti/"><span class="icon-facebook"></span></a></li>
 				          <li class="ftco-animate"><a href="https://www.instagram.com/mr_mohan_anand/"><span class="icon-instagram"></span></a></li>
+					  <li class="ftco-animate"><a href="https://linktr.ee/mohanpalleti"><span class="icon-link"></span></a></li>
 					</ul>
 				<br>
 		   </div>
