--- a/index.html
+++ b/index.html
@@ -281,11 +281,11 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Father</span> <span>: Palleti Upparayya</span></li>
 									<li class="d-flex"><span>Profile</span> <span>: Web Development</span></li>
-									<li class="d-flex"><span>Domain</span> <span>: Java, Springboot, SQL</span></li>
+									<li class="d-flex"><span>Domain</span> <span>: Java, Springboot & SQL</span></li>
 									<li class="d-flex"><span>Education</span> <span>: Bachelor of Technology</span></li>
 									<li class="d-flex"><span>Branch</span> <span>: Information Technology</span></li>
 									<li class="d-flex"><span>Other Skills</span> <span>: JDBC, JPA, Git & MS Office </span></li>
-									<li class="d-flex"><span>Language</span> <span>: Telugu, English and Hindi</span></li>
+									<li class="d-flex"><span>Language</span> <span>: Telugu, English, and Hindi</span></li>
 									<li class="d-flex"><span>Interest</span> <span>: Rubik's Cube(2x2,3x3,4x4) & Chess</span></li>
 									
 								</ul>
@@ -484,7 +484,7 @@
           	<h1 class="big big-2">Achievements</h1>
             <h2 class="mb-4">Achievements</h2>
 		  <ul style="list-style-type:circle">
-            <li style="text-align: justify;">In 2015, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
+            <li style="text-align: justify;">In 2015, while in 8th class, I was honored to be selected for the prestigious Central Government's <a href="https://drive.google.com/file/d/18t7EHskYGfg6atik1DhE2idnmGzueX17/view?usp=sharing">NMMS AWARD</a>, achieving <b>District FIRST Position</b>, which recognized by my merit in exam and provided a <b>5-year SCHOLARSHIP</b> for my continued education.</li>
 		  <li style="text-align: justify;">In 2018, while in 10th class, I was profoundly honored with the prestigious <a href="https://drive.google.com/file/d/1H_2SvdrCc3ctoLY3fHjY9lxVokF5_Meh/view?usp=sharing">PRATIBHA AWARD</a> by the Honorable Chief Minister <b>Nara Chandrababu Naidu Sir</b>, an accolade accompanied by a <b>MERIT Certificate, a Tablet, a GOLD MEDAL, and a ₹20,000 Cash Prize</b>, recognizing my exceptional academic merit.</li>
 		<li style="text-align: justify;">In 2019, during my Intermediate studies, I was honored with the <a href="https://drive.google.com/file/d/1sGOpPK1r7P8fwv-4VS8xZlr9jmgm7tP5/view?usp=sharing">ACADEMIC EXCELLENCE AWARD</a> on the occasion of <b>National Mathematics Day</b>, recognizing my strong performance in academics.</li>
 		  <li style="text-align: justify;">As an Information Technology graduate from <b>JNTU-GV University</b>, I successfully secured <a href="">FIRST CLASS WITH DISTINCTION</a> in my <b>B.Tech(IT)</b> academics, showcasing consistent high performance.</li>
@@ -547,7 +547,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://0101010101">99XX22XX00</a></p>
+	            <p><a href="tel://0101010101">99XX228800</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
