--- a/index.html
+++ b/index.html
@@ -599,7 +599,8 @@
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
 					  <li class="ftco-animate normal-txt">Find me on  </li>
-					  <li class="ftco-animate"><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti"><span class="icon-linkedin"></span></a></li>  
+					  <li class="ftco-animate"><a href="https://in.linkedin.com/in/mohan-anand-kumar-palleti"><span class="icon-linkedin"></span></a></li>
+					  <li class="ftco-animate"><a href="https://github.com/Mr-Mohan-Anand"><span class="icon-github"></span></a></li>	
 					  <li class="ftco-animate"><a href="https://x.com/Mr_Mohan_Anand"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/mohananandkumar.palleti/"><span class="icon-facebook"></span></a></li>
 				          <li class="ftco-animate"><a href="https://www.instagram.com/mr_mohan_anand/"><span class="icon-instagram"></span></a></li>
