--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
 					  <li class="ftco-animate"><a href="https://x.com/Mr_Mohan_Anand"><span class="icon-twitter"></span></a></li>
 					  <li class="ftco-animate"><a href="https://www.facebook.com/mohananandkumar.palleti/"><span class="icon-facebook"></span></a></li>
 				          <li class="ftco-animate"><a href="https://www.instagram.com/mr_mohan_anand/"><span class="icon-instagram"></span></a></li>
-					  <li class="ftco-animate"><a href="https://linktr.ee/mohanpalleti"><span class="icon-link"></span></a></li>
+					  <li class="ftco-animate"><a href="https://linktr.ee/mohanpalleti"><span class="icon-tree"></span></a></li>
 					</ul>
 				<br>
 		   </div>
@@ -620,7 +620,7 @@
 			<div class="col-md-12 text-center">
   
 			  <p>
-	Copyright @2024 MAK. </script> All Rights Reserved <i class="icon-heart color-danger" aria-hidden="true"></i>
+	Copyright @2024 <b>MAK</b>. </script> All Rights Reserved <i class="icon-heart color-danger" aria-hidden="true"></i>
 	</p>
 			</div>
 		  </div>
